# django_first_backend

./: docker-compose.yaml  manage.py  pyproject.toml
account_management/: models.py  serializers.py  urls.py
account_management/migrations/: 0001_initial.py
account_management/views/: account.py
document_management/: models.py  serializers.py  urls.py
document_management/migrations/: 0001_initial.py  0002_alter_document_document_id.py
document_management/views/: document.py
km_system/: asgi.py  settings.py  urls.py  wsgi.py
